fix: align auth divs and fix work submission

--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -17,3 +17,12 @@
 .h-8 {
     height: 52px;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: #000000;
+    box-shadow: inset 0 0 20px 20px #ffffff;
+}
